Feat: improvement of the transfer page and addition of error messages